# tree-sitter-modelica

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build-parser.yml
bindings/c/: tree-sitter-modelica.pc.in
bindings/c/tree_sitter/: tree-sitter-modelica.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_modelica/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterModelicaTests/: TreeSitterModelicaTests.swift
examples/: DrumBoiler.mo  SimpleMath.mo
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: a2-1_stored_definition.txt  a2-2_der_enum_classes.txt  a2-2_der_enum_extend_classes.txt  a2-2_external_function_call.txt  a2-2_long_class.txt  a2-2_short_class.txt  a2-3_Extends  a2-3_Extends.txt  a2-4_component_clause.txt  a2-5_modifications  a2-5_modifications.txt  a2-6-2_equations.txt  a2-6_equations.txt  a2-7_expressions
test/highlight/: Resistor.mo  SimpleEquation.mo
