[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-modelica"
description = "Modelica grammar for tree-sitter"
version = "0.2.2"
keywords = ["incremental", "parsing", "tree-sitter", "modelica"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "OpenModelica" }]
requires-python = ">=3.10"
license.text = "OSMC"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/openmodelica/tree-sitter-modelica"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
